Dynamically set enableMajorityReadConcern option.
The MMAPv1 storage engine doesn't support {readConcern: "majority"}, so
mongod will refused to start up with --enableMajorityReadConcern when
--storageEngine=mmapv1 is also specified.

--- a/resources/mongod.conf
+++ b/resources/mongod.conf
@@ -19,4 +19,4 @@ storage:
 
 replication:
   replSetName: jepsen
-  enableMajorityReadConcern: true
+  enableMajorityReadConcern: %ENABLE_MAJORITY_READ_CONCERN%
