Bind mongod to all IPv4 network interfaces
mongod process in the future may bind to the localhost interface
by default. Processes should be spawned with bind_ip: 0.0.0.0 if
they must be usable through external interfaces.

--- a/resources/mongod.conf
+++ b/resources/mongod.conf
@@ -4,6 +4,9 @@ systemLog:
   path: /opt/mongodb/mongod.log
   verbosity: 1
 
+net:
+  bindIp: 0.0.0.0
+
 storage:
   dbPath: /opt/mongodb/data
   journal:
