Add support for running tests without any virtualization.
Moves process management related code into a separate
`jepsen.mongodb.cluster` namespace. This namespace defines multimethods
for each of the `init!`, `start!`, `stop!`, and `kill!` behaviors, and
has methods associated with the `:none` and `:vm` virtualization
options.

Adds support for spawning mongobridge processes to do the network
partitioning.

Exposes a `--working-dir` option to have Jepsen extract the MongoDB
binaries and write faketimerc configuration files into a directory other
than `/opt/mongodb/` (or `/opt/jepsen/`).

Exposes a `--mongodb-dir` option to have Jepsen install the MongoDB
binaries from an existing checkout of the mongodb/mongo repository, or
from an already extracted tarball.

Also changes `jepsen.mongodb.faketime/upload-faketimerc!` to swap the
faketimerc configuration file via an atomic rename. This eliminates the
risk where the libfaketime library could misbehave if the new faketimerc
configuration file had been partially written when read by a thread in
mongod.

--- a/resources/mongod.conf
+++ b/resources/mongod.conf
@@ -1,14 +1,17 @@
 systemLog:
   destination: file
   logAppend: true
-  path: /opt/mongodb/mongod.log
+  path: %PATH_PREFIX%/mongod.log
   verbosity: 1
 
 net:
   bindIp: 0.0.0.0
 
+setParameter:
+  enableTestCommands: true
+
 storage:
-  dbPath: /opt/mongodb/data
+  dbPath: %PATH_PREFIX%/data
   journal:
     enabled: true
 #   commitIntervalMs: 1000 # might want to verify journal loss windows
