--- a/resources/mongos.conf
+++ b/resources/mongos.conf
@@ -1,11 +1,5 @@
-systemLog:
-  destination: file
-  logAppend: true
-  path: %PATH_PREFIX%/mongod.log
-  verbosity: 1
+sharding:
+  configDB: %CONFIG_DB%
 
 net:
   bindIp: 0.0.0.0
-
-sharding:
-  configDB: configsvr/%CONFIGSVRS%
