--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,14 @@
 /target
 /classes
 /checkouts
+/store
+profiles.clj
 pom.xml
 pom.xml.asc
 *.jar
+*.swp
 *.class
 /.lein-*
 /.nrepl-port
 .hgignore
 .hg/
-.lein-repl-history
-.lein-deps-sum
-.lein-failures
-*~
-.*.swp
-/store
