--- a/resources/mongod.conf
+++ b/resources/mongod.conf
@@ -1,28 +1,45 @@
+# mongod.conf
+
+# for documentation of all options, see:
+#   http://docs.mongodb.org/manual/reference/configuration-options/
+
+# Where and how to store data.
+storage:
+  dbPath: /var/lib/mongodb
+  journal:
+    enabled: true
+#  engine:
+#  mmapv1:
+#  wiredTiger:
+
+# where to write logging data.
 systemLog:
   destination: file
   logAppend: true
-  path: %PATH_PREFIX%/mongod.log
-  verbosity: 1
+  path: /var/log/mongodb/mongod.log
 
+# network interfaces
 net:
+  # port: 27017
   bindIp: 0.0.0.0
 
-setParameter:
-  enableTestCommands: true
+# how the process runs
+processManagement:
+  timeZoneInfo: /usr/share/zoneinfo
 
-storage:
-  dbPath: %PATH_PREFIX%/data
-  journal:
-    enabled: true
-#   commitIntervalMs: 1000 # might want to verify journal loss windows
-  engine: %STORAGE_ENGINE%
-  mmapv1:
-    # Disable data file preallocation. We nuke the entire database between runs
-    # so this improves startup speed.
-    preallocDataFiles: false
-    # Reduce journal size from 1G to 128M
-    smallFiles: true
+#security:
+
+#operationProfiling:
 
 replication:
-  replSetName: jepsen
-  enableMajorityReadConcern: %ENABLE_MAJORITY_READ_CONCERN%
+  replSetName: %REPL_SET_NAME%
+
+sharding:
+  clusterRole: %CLUSTER_ROLE%
+
+## Enterprise-Only Options:
+
+#auditLog:
+
+#snmp:
+
