MongoDB 4.4.9, Java client 4.6.0
We now assign bindIp to an actual IP, instead of 0.0.0.0, suppress some
unneeded logging, and use ping instead of listing databases (which now
fails on fresh nodes) when blocking before replica set initiation

--- a/resources/mongod.conf
+++ b/resources/mongod.conf
@@ -21,7 +21,7 @@ systemLog:
 # network interfaces
 net:
   # port: 27017
-  bindIp: 0.0.0.0
+  bindIp: %IP%
 
 # how the process runs
 processManagement:
